# epymetheus

./: .gitignore  .travis.yml  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  setup.py  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
epymetheus/: Untitled.ipynb  __init__.py  _bunch.py  backtester.py  history.py  metric.py  pipe.py  strategy.py  temp.py  trade.py  tradehistory.py  transaction.py  transformer.py  universe.py  wealth.py
epymetheus/_util/: __init__.py  to_md.py
epymetheus/benchmark/: __init__.py  bnh.py
epymetheus/benchmarks/: __init__.py  benchmarks.py
epymetheus/core/: __init__.py  api.py  asset.py  trade.py
epymetheus/datasets/: __init__.py  _utils.py  factors.py  randomwalk.py  usstock.py  usstocks.py  usstocks.yml
epymetheus/exceptions/: __init__.py  exceptions.py
epymetheus/helper/: __init__.py  barrier.py  factor.py  signal.py  signals.py
epymetheus/history/: __init__.py  history.py
epymetheus/io/: __init__.py  web.py
epymetheus/metric/: metric.py
epymetheus/metrics/: __init__.py  metrics.py
epymetheus/old/: metric.py  result.py
epymetheus/pipe/: __init__.py  history.py  matrix.py  metric.py  signal.py  transaction.py  wealth.py
epymetheus/strategy/: __init__.py  strategy.py
epymetheus/trade/: __init__.py  trade.py
epymetheus/transaction/: __init__.py  transaction.py
epymetheus/universe/: __init__.py  universe.py
epymetheus_/: __init__.py
sample/: sample.py  test.ipynb
tests/: _utils.py  conftest.py  examples.sh  pytest.sh  test_array.py  test_dataframe.py  test_datasets.py  test_history.py  test_linearity.py  test_linearlity.py  test_one.py  test_pipe.py  test_strategy.py  test_trade.py  test_universe.py  test_utils.py  test_void.py  test_zero.py
(+82 files in other folders)
