[tool.poetry]
name = "epymetheus"
version = "0.3.0"
description = "Python framework for multi-asset backtesting."
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.0"
pyyaml = "^5.3"
pandas-datareader = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
pandas_datareader = "^0.8.1"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
